# lambdabot-1

./: AUTHORS  Lambdabot.hs  Plugin.hs  lambdabot.cabal
Lambdabot/: Error.hs  Signals.hs
Lambdabot/Utils/: AltTime.hs  MiniHTTP.hs  Parser.hs  Pointful.hs  Regex.hs  Serial.hs
Plugin/: Base.hs  Compose.hs  Eval.hs  Help.hs  OfflineRC.hs  Pointful.hs  Source.hs  System.hs  Tell.hs  Where.hs
Plugin/Dict/: DictLookup.hs
Plugin/Pl/: PrettyPrinter.hs  Rules.hs
Plugin/Quote/: Fortune.hs
src/: IRCBase.hs  LBState.hs  LMain.hs  NickEq.hs  Plugin.hs
src/Lambdabot/: Boot.hs  Config.hs  DMain.hs  Error.hs  IRCBase.hs  LBState.hs  LMain.hs  Lambdabot.hs  Main.hs  Message.hs  Modules.hs  NickEq.hs  Plugin.hs  Signals.hs  Utils.hs
src/Lambdabot/Plugin/: Activity.hs  BF.hs  Babel.hs  Base.hs  Check.hs  Code.hs  Compose.hs  DarcsPatchWatch.hs  Dice.hs  Dict.hs  Djinn.hs  Dummy.hs  Dynamic.hs  Elite.hs  Eval.hs  FT.hs  Fact.hs  Filter.hs  Free.hs  Fresh.hs  Haddock.hs  Hello.hs  Help.hs  Hoogle.hs  IRC.hs  Instances.hs  Karma.hs  Localtime.hs  Log.hs  More.hs  OEIS.hs  OfflineRC.hs  Paste.hs  Pl.hs  Pointful.hs  Poll.hs  Pretty.hs  Quote.hs  Scheck.hs  Search.hs  (+18 more)
src/Lambdabot/Plugin/Dict/: DictLookup.hs
src/Lambdabot/Plugin/Dummy/: DocAssocs.hs
src/Lambdabot/Plugin/Pl/: Optimize.hs  PrettyPrinter.hs  Rules.hs  Test.hs  Transform.hs
src/Lambdabot/Plugin/Quote/: Fortune.hs  Text.hs
src/Lambdabot/Utils/: FixPrecedence.hs  Process.hs  Url.hs
src/Plugin/: Base.hs  Check.hs  Djinn.hs  Eval.hs  Fact.hs  Haddock.hs  Help.hs  IRC.hs  OfflineRC.hs  Poll.hs  Scheck.hs  Seen.hs  Tell.hs  UnMtl.hs  Undo.hs  Vixen.hs
src/Plugin/Quote/: Fortune.hs
