name:                lambdabot
version:             4.2.3.3
license:             GPL
license-file:        LICENSE
author:              Don Stewart
maintainer:          Jan Stolarek <jan.stolarek@p.lodz.pl>
category:            Development, Web
synopsis:            Lambdabot is a development tool and advanced IRC bot
description:         Lambdabot is an IRC bot written over several years by
                     those on the #haskell IRC channel.
                     .
                     It operates as a command line tool, embedded in an editor,
                     embedded in GHCi, via internet relay chat and on the web.
homepage:            http://haskell.org/haskellwiki/Lambdabot

build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC>=7.6.1

extra-source-files:
  Modules.hs-boot,
  State/imports.h,
  Plugin/Hello.hs,
  Modules.hs

data-files:
  State/djinn,
  State/fact,
  State/fresh,
  State/haddock,
  State/karma,
  State/L.hs,
  State/poll,
  State/Pristine.hs,
  State/quote,
  State/seen,
  State/source,
  State/state,
  State/system,
  State/tell,
  State/todo,
  State/url,
  State/vixen,
  State/where,
  -- Needed for @type
  State/imports.h,
  online.rc,
  online2.rc

source-repository head
  type:     git
  location: git://github.com/killy9999/lambdabot.git

Library
  hs-source-dirs:
    src
  build-depends:
    base == 4.*,
    bytestring,
    filepath,
    mtl>2,
    process,
    regex-posix,
    unix,
    zlib
  exposed-modules:
    Config,
    File,
    IRCBase,
    LBState,
    LMain,
    Lambdabot,
    Lambdabot.Utils,
    Message,
    NickEq,
    Plugin,
    Plugin.Activity,
    Plugin.BF,
    Plugin.Babel,
    Plugin.Base,
    Plugin.Check,
    Plugin.Code,
    Plugin.Compose,
    Plugin.DarcsPatchWatch,
    Plugin.Dice,
    Plugin.Dict,
    Plugin.Dict.DictLookup,
    Plugin.Djinn,
    Plugin.Dummy,
    Plugin.Dummy.DocAssocs,
    Plugin.Dynamic,
    Plugin.Elite,
    Plugin.Eval,
    Plugin.FT,
    Plugin.Fact,
    Plugin.Filter,
    Plugin.Free,
    Plugin.Free.Expr,
    Plugin.Free.FreeTheorem,
    Plugin.Free.Parse,
    Plugin.Free.Test,
    Plugin.Free.Theorem,
    Plugin.Free.Type,
    Plugin.Free.Util,
    Plugin.Fresh,
    Plugin.Haddock,
    Plugin.Help,
    Plugin.Hoogle,
    Plugin.IRC,
    Plugin.Instances,
    Plugin.Karma,
    Plugin.Localtime,
    Plugin.Log,
    Plugin.More,
    Plugin.OEIS,
    Plugin.OfflineRC,
    Plugin.Pl,
    Plugin.Pl.Common,
    Plugin.Pl.Names,
    Plugin.Pl.Optimize,
    Plugin.Pl.Parser,
    Plugin.Pl.PrettyPrinter,
    Plugin.Pl.RuleLib,
    Plugin.Pl.Rules,
    Plugin.Pl.Transform,
    Plugin.Pointful,
    Plugin.Poll,
    Plugin.Pretty,
    Plugin.Quote,
    Plugin.Quote.Fortune,
    Plugin.Quote.Text,
    Plugin.Scheck
    Plugin.Search,
    Plugin.Seen,
    Plugin.Slap,
    Plugin.Source,
    Plugin.Spell,
    Plugin.State,
    Plugin.System,
    Plugin.Tell,
    Plugin.Ticker,
    Plugin.Todo,
    Plugin.Topic,
    Plugin.Type,
    Plugin.UnMtl,
    Plugin.Undo,
    Plugin.Unlambda,
    Plugin.Url,
    Plugin.Version,
    Plugin.Vixen,
    Plugin.Where,
    Shared
  ghc-options:
    -fno-warn-missing-methods
  buildable:
    False

Executable lambdabot
  hs-source-dirs:
    src
  build-depends:
    HTTP,
    array,
    base == 4.*,
    binary>0.2,
    bytestring,
    containers,
    directory,
    filepath,
    haskell-src,
    haskell-src-exts>=0.4.8,
    mtl>2,
    network,
    oeis>=0.2,
    old-time,
    parsec,
    pretty,
    random,
    readline,
    regex-compat,
    show>=0.3,
    syb,
    tagsoup,
    template-haskell,
    unix,
    utf8-string,
    -- runtime dependencies - for eval etc.
    IOSpec,
    MonadRandom,
    arrows,
    brainfuck,
    data-memocombinators,
    hoogle,
    logict>=0.4.2,
    mueval,
    numbers,
    template-haskell,
    unlambda,
    vector-space
  main-is:
    Main.hs
  ghc-options:
    -funbox-strict-fields
    -fno-warn-incomplete-patterns
    -fno-warn-missing-methods
    -fno-warn-orphans
    -- Apparently needed to work around zombie & IRC connection issues
    -threaded
  include-dirs: .
