name:                lambdabot
version:             4.2.3.3
license:             GPL
license-file:        LICENSE
author:              Don Stewart
maintainer:          Jan Stolarek <jan.stolarek@p.lodz.pl>
category:            Development, Web
synopsis:            Lambdabot is a development tool and advanced IRC bot
description:         Lambdabot is an IRC bot written over several years by
                     those on the #haskell IRC channel.
                     .
                     It operates as a command line tool, embedded in an editor,
                     embedded in GHCi, via internet relay chat and on the web.
homepage:            http://haskell.org/haskellwiki/Lambdabot

build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC>=7.6.1

extra-source-files:
  src/Lambdabot/Modules.hs-boot,
  State/imports.h,
  src/Lambdabot/Plugin/Hello.hs,
  src/Lambdabot/Modules.hs

data-files:
  State/djinn,
  State/fact,
  State/fresh,
  State/haddock,
  State/karma,
  State/L.hs,
  State/poll,
  State/Pristine.hs,
  State/quote,
  State/seen,
  State/source,
  State/state,
  State/system,
  State/tell,
  State/todo,
  State/url,
  State/vixen,
  State/where,
  -- Needed for @type
  State/imports.h,
  online.rc,
  online2.rc

source-repository head
  type:     git
  location: git://github.com/killy9999/lambdabot.git

library
  hs-source-dirs:
    src
  build-depends:
    base == 4.*,
    bytestring,
    filepath,
    mtl>2,
    process,
    regex-posix,
    unix,
    zlib
  exposed-modules:
    Lambdabot.Config,
    Lambdabot.File,
    Lambdabot.IRCBase,
    Lambdabot.LBState,
    Lambdabot.LMain,
    Lambdabot.Lambdabot,
    Lambdabot.Utils,
    Lambdabot.Message,
    Lambdabot.NickEq,
    Lambdabot.Plugin,
    Lambdabot.Plugin.Activity,
    Lambdabot.Plugin.BF,
    Lambdabot.Plugin.Babel,
    Lambdabot.Plugin.Base,
    Lambdabot.Plugin.Check,
    Lambdabot.Plugin.Code,
    Lambdabot.Plugin.Compose,
    Lambdabot.Plugin.DarcsPatchWatch,
    Lambdabot.Plugin.Dice,
    Lambdabot.Plugin.Dict,
    Lambdabot.Plugin.Dict.DictLookup,
    Lambdabot.Plugin.Djinn,
    Lambdabot.Plugin.Dummy,
    Lambdabot.Plugin.Dummy.DocAssocs,
    Lambdabot.Plugin.Dynamic,
    Lambdabot.Plugin.Elite,
    Lambdabot.Plugin.Eval,
    Lambdabot.Plugin.FT,
    Lambdabot.Plugin.Fact,
    Lambdabot.Plugin.Filter,
    Lambdabot.Plugin.Free,
    Lambdabot.Plugin.Free.Expr,
    Lambdabot.Plugin.Free.FreeTheorem,
    Lambdabot.Plugin.Free.Parse,
    Lambdabot.Plugin.Free.Test,
    Lambdabot.Plugin.Free.Theorem,
    Lambdabot.Plugin.Free.Type,
    Lambdabot.Plugin.Free.Util,
    Lambdabot.Plugin.Fresh,
    Lambdabot.Plugin.Haddock,
    Lambdabot.Plugin.Help,
    Lambdabot.Plugin.Hoogle,
    Lambdabot.Plugin.IRC,
    Lambdabot.Plugin.Instances,
    Lambdabot.Plugin.Karma,
    Lambdabot.Plugin.Localtime,
    Lambdabot.Plugin.Log,
    Lambdabot.Plugin.More,
    Lambdabot.Plugin.OEIS,
    Lambdabot.Plugin.OfflineRC,
    Lambdabot.Plugin.Pl,
    Lambdabot.Plugin.Pl.Common,
    Lambdabot.Plugin.Pl.Names,
    Lambdabot.Plugin.Pl.Optimize,
    Lambdabot.Plugin.Pl.Parser,
    Lambdabot.Plugin.Pl.PrettyPrinter,
    Lambdabot.Plugin.Pl.RuleLib,
    Lambdabot.Plugin.Pl.Rules,
    Lambdabot.Plugin.Pl.Transform,
    Lambdabot.Plugin.Pointful,
    Lambdabot.Plugin.Poll,
    Lambdabot.Plugin.Pretty,
    Lambdabot.Plugin.Quote,
    Lambdabot.Plugin.Quote.Fortune,
    Lambdabot.Plugin.Quote.Text,
    Lambdabot.Plugin.Scheck
    Lambdabot.Plugin.Search,
    Lambdabot.Plugin.Seen,
    Lambdabot.Plugin.Slap,
    Lambdabot.Plugin.Source,
    Lambdabot.Plugin.Spell,
    Lambdabot.Plugin.State,
    Lambdabot.Plugin.System,
    Lambdabot.Plugin.Tell,
    Lambdabot.Plugin.Ticker,
    Lambdabot.Plugin.Todo,
    Lambdabot.Plugin.Topic,
    Lambdabot.Plugin.Type,
    Lambdabot.Plugin.UnMtl,
    Lambdabot.Plugin.Undo,
    Lambdabot.Plugin.Unlambda,
    Lambdabot.Plugin.Url,
    Lambdabot.Plugin.Version,
    Lambdabot.Plugin.Vixen,
    Lambdabot.Plugin.Where,
    Lambdabot.Shared
  ghc-options:
    -fno-warn-missing-methods
  buildable:
    True

Executable lambdabot
  hs-source-dirs:
    src
  main-is:
    Lambdabot/Main.hs
  build-depends:
    array,
    base == 4.*,
    binary>0.2,
    bytestring,
    containers,
    directory,
    filepath,
    haskell-src,
    haskell-src-exts>=0.4.8,
    HTTP,
    mtl>2,
    network,
    oeis>=0.2,
    old-time,
    parsec,
    pretty,
    random,
    readline,
    regex-compat,
    show>=0.3,
    syb,
    tagsoup,
    template-haskell,
    unix,
    utf8-string,
    -- runtime dependencies - for eval etc.
    arrows,
    brainfuck,
    data-memocombinators,
    hoogle,
    logict>=0.4.2,
    IOSpec,
    MonadRandom,
    mueval,
    numbers,
    template-haskell,
    unlambda,
    vector-space
  ghc-options:
    -funbox-strict-fields
    -fno-warn-incomplete-patterns
    -fno-warn-missing-methods
    -fno-warn-orphans
    -- Apparently needed to work around zombie & IRC connection issues
    -threaded
  include-dirs: .
