name:                lambdabot
version:             4.2.3.3
license:             GPL
license-file:        LICENSE
author:              Don Stewart
maintainer:          Jan Stolarek <jan.stolarek@p.lodz.pl>
category:            Development, Web
synopsis:            Lambdabot is a development tool and advanced IRC bot
description:         Lambdabot is an IRC bot written over several years by
                     those on the #haskell IRC channel.
                     .
                     It operates as a command line tool, embedded in an editor,
                     embedded in GHCi, via internet relay chat and on the web.
homepage:            http://haskell.org/haskellwiki/Lambdabot

build-type:          Simple
cabal-version:       >= 1.8
tested-with:         GHC>=7.6.1

extra-source-files:
  AUTHORS
  BUGS
  COMMANDS
  COMMENTARY
  README
  STYLE
  TODO
  scripts/ghci.sh
  scripts/online.rc
  scripts/vim/bot
  scripts/vim/pl
  scripts/vim/README
  scripts/vim/run
  scripts/vim/runwith
  scripts/vim/typeOf
  src/Lambdabot/Modules.hs
  src/Lambdabot/Modules.hs-boot
  src/Lambdabot/Plugin/Hello.hs
  State/imports.h

data-files:
  State/djinn,
  State/fact,
  State/fresh,
  State/haddock,
  State/karma,
  State/L.hs,
  State/poll,
  State/Pristine.hs,
  State/quote,
  State/seen,
  State/source,
  State/state,
  State/system,
  State/tell,
  State/todo,
  State/url,
  State/vixen,
  State/where,
  -- Needed for @type
  State/imports.h

source-repository head
  type:     git
  location: git://github.com/killy9999/lambdabot.git

executable lambdabot
  hs-source-dirs:
    src
  main-is:
    Lambdabot/Main.hs
  build-depends:
    array                >= 0.4.0.0    ,
    base                 >= 4.4        ,
    binary               >= 0.5.1.0    ,
    bytestring           >= 0.9.2.1    ,
    containers           >= 0.5        ,
    directory            >= 1.2.0.0    ,
    filepath             >= 1.3.0.0    ,
    haskell-src          >= 1.0.1.5    ,
    haskell-src-exts     >= 1.12.0     ,
    HTTP                 >= 4000.2.2   ,
    mtl                  >= 2.1        ,
    network              >= 2.3.1.0    ,
    oeis                 >= 0.3.1      ,
    old-time             >= 1.1.0.0    ,
    parsec               >= 3.1.2      ,
    pretty               >= 1.1.1.0    ,
    process              >= 1.1.0.1    ,
    random               >= 1.0.1.1    ,
    readline             >= 1.0.3.0    ,
    regex-compat         >= 0.95.1     ,
    regex-posix          >= 0.95.1     ,
    syb                  >= 0.3.6      ,
    tagsoup              >= 0.12.6     ,
    template-haskell     >= 2.7.0.0    ,
    unix                 >= 2.6        ,
    utf8-string          >= 0.3.7      ,
    zlib                 >= 0.5.3.1    ,
    --runtime dependencies - for eval etc.
    arrows               >= 0.4.4.0    ,
    brainfuck             == 0.1       ,
    data-memocombinators >= 0.4.4      ,
    hoogle               >= 4.2.10     ,
    IOSpec               >= 0.2.5      ,
    logict               >= 0.5.0.1    ,
    MonadRandom          >= 0.1.8      ,
    mueval               >= 0.8.2      ,
    numbers              >= 3000.0.0.0 ,
    show                 >= 0.4.1.2    ,
    unlambda             >= 0.1.3      ,
    vector-space         >= 0.8.0

  other-modules:
    Lambdabot.Config,
    Lambdabot.Error,
    Lambdabot.File,
    Lambdabot.IRCBase,
    Lambdabot.LBState,
    Lambdabot.LMain,
    Lambdabot.Lambdabot,
    Lambdabot.Message,
    Lambdabot.NickEq,
    Lambdabot.Plugin,
    Lambdabot.Plugin.Activity,
    Lambdabot.Plugin.BF,
    Lambdabot.Plugin.Babel,
    Lambdabot.Plugin.Base,
    Lambdabot.Plugin.Check,
    Lambdabot.Plugin.Code,
    Lambdabot.Plugin.Compose,
    Lambdabot.Plugin.DarcsPatchWatch,
    Lambdabot.Plugin.Dice,
    Lambdabot.Plugin.Dict,
    Lambdabot.Plugin.Dict.DictLookup,
    Lambdabot.Plugin.Djinn,
    Lambdabot.Plugin.Dummy,
    Lambdabot.Plugin.Dummy.DocAssocs,
    Lambdabot.Plugin.Dynamic,
    Lambdabot.Plugin.Elite,
    Lambdabot.Plugin.Eval,
    Lambdabot.Plugin.FT,
    Lambdabot.Plugin.Fact,
    Lambdabot.Plugin.Filter,
    Lambdabot.Plugin.Free,
    Lambdabot.Plugin.Free.Expr,
    Lambdabot.Plugin.Free.FreeTheorem,
    Lambdabot.Plugin.Free.Parse,
    Lambdabot.Plugin.Free.Test,
    Lambdabot.Plugin.Free.Theorem,
    Lambdabot.Plugin.Free.Type,
    Lambdabot.Plugin.Free.Util,
    Lambdabot.Plugin.Fresh,
    Lambdabot.Plugin.Haddock,
    Lambdabot.Plugin.Help,
    Lambdabot.Plugin.Hoogle,
    Lambdabot.Plugin.IRC,
    Lambdabot.Plugin.Instances,
    Lambdabot.Plugin.Karma,
    Lambdabot.Plugin.Localtime,
    Lambdabot.Plugin.Log,
    Lambdabot.Plugin.More,
    Lambdabot.Plugin.OEIS,
    Lambdabot.Plugin.OfflineRC,
    Lambdabot.Plugin.Pl,
    Lambdabot.Plugin.Pl.Common,
    Lambdabot.Plugin.Pl.Names,
    Lambdabot.Plugin.Pl.Optimize,
    Lambdabot.Plugin.Pl.Parser,
    Lambdabot.Plugin.Pl.PrettyPrinter,
    Lambdabot.Plugin.Pl.RuleLib,
    Lambdabot.Plugin.Pl.Rules,
    Lambdabot.Plugin.Pl.Transform,
    Lambdabot.Plugin.Pointful,
    Lambdabot.Plugin.Poll,
    Lambdabot.Plugin.Pretty,
    Lambdabot.Plugin.Quote,
    Lambdabot.Plugin.Quote.Fortune,
    Lambdabot.Plugin.Quote.Text,
    Lambdabot.Plugin.Scheck
    Lambdabot.Plugin.Search,
    Lambdabot.Plugin.Seen,
    Lambdabot.Plugin.Slap,
    Lambdabot.Plugin.Source,
    Lambdabot.Plugin.Spell,
    Lambdabot.Plugin.State,
    Lambdabot.Plugin.System,
    Lambdabot.Plugin.Tell,
    Lambdabot.Plugin.Ticker,
    Lambdabot.Plugin.Todo,
    Lambdabot.Plugin.Topic,
    Lambdabot.Plugin.Type,
    Lambdabot.Plugin.UnMtl,
    Lambdabot.Plugin.Undo,
    Lambdabot.Plugin.Unlambda,
    Lambdabot.Plugin.Url,
    Lambdabot.Plugin.Version,
    Lambdabot.Plugin.Vixen,
    Lambdabot.Plugin.Where,
    Lambdabot.Shared,
    Lambdabot.Signals,
    Lambdabot.Utils
    Lambdabot.Utils.AltTime,
    Lambdabot.Utils.FixPrecedence,
    Lambdabot.Utils.MiniHTTP,
    Lambdabot.Utils.Parser,
    Lambdabot.Utils.Pointful,
    Lambdabot.Utils.Process,
    Lambdabot.Utils.Regex,
    Lambdabot.Utils.Serial,
    Lambdabot.Utils.Url
  ghc-options:
    -funbox-strict-fields
    -fno-warn-incomplete-patterns
    -fno-warn-missing-methods
    -fno-warn-orphans
    -- Apparently needed to work around zombie & IRC connection issues
    -threaded
  buildable:
    True

--Executable lambdabot
--  hs-source-dirs:
--    src
--  main-is:
--    Lambdabot/Main.hs
--  build-depends:
--  ghc-options:
--    -funbox-strict-fields
--    -fno-warn-incomplete-patterns
--    -fno-warn-missing-methods
--    -fno-warn-orphans
    -- Apparently needed to work around zombie & IRC connection issues
--    -threaded
--  include-dirs: .
